# NASDAQ-SIMULATOR

./: .gitignore  README.md  integrated_simulator.py
cpp_order_book/: CMakeLists.txt  README.md  build.sh  main.cpp  multi_threaded_main.cpp  multi_threaded_processor.cpp  multi_threaded_processor.h  order_book.cpp  order_book.h  order_book_processor  parallel_main.cpp  parallel_processor.h  process_parser_output.sh  py_bindings.cpp  trading_strategy.cpp  trading_strategy.h
cpp_parser/: CMakeLists.txt  README.md
cpp_parser/include/: enums.h  json_serializer.h  message.h  parser.h  price.h
cpp_parser/src/: enums.cpp  json_serializer.cpp  main.cpp  parser.cpp
integrated_solution/: build.sh  integrated_main.cpp  integrated_processor.h  parallel_parser.h  parsed_message_queue.h  thread_pool.h
market_dashboard/: README.md  app.py  generate_data.py  time_simulator.py
market_dashboard/assets/: style.css
market_data_processor/: CMakeLists.txt  README.md
market_data_processor/include/: market_data_processor.h  market_stats.h  order_book.h
market_data_processor/src/: main.cpp  market_data_processor.cpp  market_stats.cpp  order_book.cpp
order_book_simulator/: README.md  main.py  market_data_server.py  order_book.py  requirements.txt  visualize.py
trading_engine/: requirements.txt  trading_engine.py
